--- a/.github/workflows/test-linux-stable.yml
+++ b/.github/workflows/test-linux-stable.yml
@@ -15,13 +15,14 @@ jobs:
     with:
       repository: pytorch/rl
       runner: "linux.g5.4xlarge.nvidia.gpu"
-      gpu-arch-type: "cuda"
-      gpu-arch-version: "11.6"
+      docker-image: "pytorch/manylinux-cuda116"
       timeout: 120
       script: |
         set -euo pipefail
         export PYTHON_VERSION="3.8"
-        export CU_VERSION="${{ inputs.gpu-arch-version }}"
+        export CU_VERSION="11.6"
+        export TAR_OPTIONS="--no-same-owner"
+
         ./.circleci/unittest/linux_stable/scripts/setup_env.sh
         ./.circleci/unittest/linux_stable/scripts/install.sh
         ./.circleci/unittest/linux_stable/scripts/run_test.sh
