use nvidiagl image

--- a/.github/workflows/test-linux-envpool.yml
+++ b/.github/workflows/test-linux-envpool.yml
@@ -15,8 +15,9 @@ jobs:
     with:
       repository: pytorch/rl
       runner: "linux.g5.4xlarge.nvidia.gpu"
-      gpu-arch-type: cuda
-      gpu-arch-version: "11.7"
+      # gpu-arch-type: cuda
+      # gpu-arch-version: "11.7"
+      docker-image: "nvidia/cudagl:11.4.0-base"
       timeout: 120
       script: |
         set -euo pipefail
