--- a/.github/workflows/test-linux-gpu.yml
+++ b/.github/workflows/test-linux-gpu.yml
@@ -29,6 +29,7 @@ jobs:
     with:
       runner: linux.g5.4xlarge.nvidia.gpu
       repository: pytorch/rl
+      docker-image: "nvidia/cuda:12.2.0-devel-ubuntu22.04"
       gpu-arch-type: cuda
       gpu-arch-version: ${{ matrix.cuda_arch_version }}
       timeout: 90
@@ -43,20 +44,6 @@ jobs:
 
         echo "PYTHON_VERSION: $PYTHON_VERSION"
         echo "CU_VERSION: $CU_VERSION"
-        
-        cd /work
 
         ## setup_env.sh
-        ./.circleci/unittest/linux/scripts/setup_env.sh
-
-        ## install.sh
-        ./.circleci/unittest/linux/scripts/install.sh
-
-        ## run_test.sh
-        ./.circleci/unittest/linux/scripts/run_test.sh
-
-        ## post_process.sh
-        ./.circleci/unittest/linux/scripts/post_process.sh
-
-
-        
+        bash .circleci/unittest/linux/scripts/run_all.sh
