--- a/.github/workflows/test-linux-habitat.yml
+++ b/.github/workflows/test-linux-habitat.yml
@@ -16,19 +16,27 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unittests:
+  tests:
+    strategy:
+      matrix:
+        python_version: ["3.8"] # "3.8", "3.9", "3.10", "3.11"
+        cuda_arch_version: ["11.6"] # "11.6", "11.7"
+      fail-fast: false
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
+      runner: linux.g5.4xlarge.nvidia.gpu
       repository: pytorch/rl
-      runner: "linux.g5.4xlarge.nvidia.gpu"
-      docker-image: "nvidia/cudagl:11.4.0-base"
-      timeout: 120
+      docker-image: "nvidia/cuda:12.2.0-devel-ubuntu22.04"
+      gpu-arch-type: cuda
+      gpu-arch-version: ${{ matrix.cuda_arch_version }}
+      timeout: 90
       script: |
-        set -euo pipefail
-        export PYTHON_VERSION="3.9"
-        export CU_VERSION="cu117"
-        export TAR_OPTIONS="--no-same-owner"
-        export UPLOAD_CHANNEL="nightly"
-        export TF_CPP_MIN_LOG_LEVEL=0
+        # Set env vars from matrix
+        export PYTHON_VERSION=${{ matrix.python_version }}
+        # Commenting these out for now because the GPU test are not working inside docker
+        export CUDA_ARCH_VERSION=${{ matrix.cuda_arch_version }}
+        export CU_VERSION="cu${CUDA_ARCH_VERSION:0:2}${CUDA_ARCH_VERSION:3:1}"
+        # Remove the following line when the GPU tests are working inside docker, and uncomment the above lines
+        #export CU_VERSION="cpu"
 
         bash .circleci/unittest/linux_libs/scripts_habitat/run_all.sh
