--- a/.circleci/unittest/linux_libs/scripts_habitat/environment.yml
+++ b/.circleci/unittest/linux_libs/scripts_habitat/environment.yml
@@ -15,5 +15,6 @@ dependencies:
     - pytest-rerunfailures
     - expecttest
     - pyyaml
-    - scipy
+    - scipy==1.9.1
     - hydra-core
+    - ninja
