fix reward scale, reduce target return config

--- a/examples/decision_transformer/odt_config.yaml
+++ b/examples/decision_transformer/odt_config.yaml
@@ -12,7 +12,7 @@ env:
   reward_scaling: 0.001 # for r2g
   noop: 1
   seed: 2
-  target_return_mode: constant
+  target_return_mode: reduce
   eval_target_return: 6000
   collect_target_return: 12000
 
