--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,11 +1,11 @@
 matplotlib
 numpy
-sphinx-copybutton
-sphinx-gallery
-sphinx
-Jinja2
-sphinx-autodoc-typehints
-sphinx-serve
+sphinx-copybutton==0.5.2
+sphinx-gallery==0.13.0
+sphinx==6.2.1
+Jinja2==3.1.2
+sphinx-autodoc-typehints==1.23.0
+sphinx-serve==1.0.1
 git+https://github.com/vmoens/aafig@4319769eae88fff8e3464858f3cf8c277f35335d
 sphinxcontrib-htmlhelp
 -e git+https://github.com/pytorch/pytorch_sphinx_theme.git#egg=pytorch_sphinx_theme
