--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,16 +1,16 @@
 matplotlib
 numpy
-sphinx-copybutton==0.5.2
-sphinx-gallery==0.13.0
-sphinx==6.2.1
+sphinx-copybutton
+sphinx-gallery
+sphinx===5.0.0
 Jinja2==3.1.2
-sphinx-autodoc-typehints==1.23.0
+sphinx-autodoc-typehints
 sphinx-serve==1.0.1
 git+https://github.com/vmoens/aafig@4319769eae88fff8e3464858f3cf8c277f35335d
 sphinxcontrib-htmlhelp
 -e git+https://github.com/pytorch/pytorch_sphinx_theme.git#egg=pytorch_sphinx_theme
-myst-parser==2.0.0
-docutils==0.19
+myst-parser
+docutils
 
 torchvision
 dm_control
