--- a/examples/multiagent/qmix_vdn.yaml
+++ b/examples/multiagent/qmix_vdn.yaml
@@ -20,7 +20,7 @@ buffer:
   memory_size: ???
 
 loss:
-  mixer_type: "qgnn-state"   # choose from "qmix", "vdn", "qgnn", "qgnn-state"
+  mixer_type: "qmix"   # choose from "qmix", "vdn", "qgnn", "qgnn-state"
   gamma: 0.9
   tau: 0.005 # For target net
 
