--- a/.circleci/unittest/linux/scripts/environment.yml
+++ b/.circleci/unittest/linux/scripts/environment.yml
@@ -4,12 +4,17 @@ channels:
 dependencies:
   - pip
   - protobuf
+  - dm-control
+  - cloudpickle
+  - pygame
+  - moviepy
+  - hypothesis
+  - future
+  - av
+  - ray
+  - wandb
+  - scipy
   - pip:
-    - hypothesis
-    - future
-    - cloudpickle
-    - pygame
-    - moviepy
     - tqdm
     - pytest
     - pytest-cov
@@ -18,13 +23,8 @@ dependencies:
     - pytest-rerunfailures
     - expecttest
     - pyyaml
-    - scipy
     - hydra-core
     - tensorboard
     - imageio==2.26.0
-    - wandb
-    - dm_control
     - mlflow
-    - av
     - coverage
-    - ray
