--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -1,8 +1,8 @@
 # Environment
 env:
-  name: HalfCheetah-v3
+  name: Ant-v3
   task: ""
-  exp_name: "HalfCheetah-SAC"
+  exp_name: "Ant-SAC-lr1e-3-fixed-alpha"
   library: gym
   frame_skip: 1
   seed: 1
@@ -29,11 +29,13 @@ optimization:
   utd_ratio: 1.0
   gamma: 0.99
   loss_function: smooth_l1
-  lr: 3e-4
+  lr: 1.e-3
   weight_decay: 2e-4
   lr_scheduler: ""
   batch_size: 256
   target_update_polyak: 0.995
+  alpha_init: 0.2
+  fixed_alpha: True
 
 # Algorithm
 network:
