--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -1,11 +1,11 @@
 # Environment
 env:
-  name: Walker2d-v3
+  name: HalfCheetah-v3
   task: ""
-  exp_name: "Walker2d-SAC"
+  exp_name: "HalfCheetah-SAC"
   library: gym
   frame_skip: 1
-  seed: 1
+  seed: 0
 
 # Collection
 collector:
@@ -30,8 +30,6 @@ optimization:
   gamma: 0.99
   loss_function: smooth_l1
   lr: 3.e-4
-  weight_decay: 2e-4
-  lr_scheduler: ""
   batch_size: 256
   target_update_polyak: 0.995
   alpha_init: 1.0
