--- a/examples/ddpg/config.yaml
+++ b/examples/ddpg/config.yaml
@@ -9,8 +9,8 @@ env:
 
 # Collection
 collector:
-  total_frames: 1_000_000
-  init_random_frames: 10_000
+  total_frames: 1000000
+  init_random_frames: 10000
   frames_per_batch: 1000
   max_frames_per_traj: 1000
   init_env_steps: 1000
