--- a/examples/cql/offline_config.yaml
+++ b/examples/cql/offline_config.yaml
@@ -1,14 +1,13 @@
 # Task and env
 env:
-  name: HalfCheetah-v2
+  name: Hopper-v2
   task: ""
   library: gym
-  exp_name: cql_halfcheetah-medium-v2
+  exp_name: cql_hopper-medium-v2
   n_samples_stats: 1000
   frame_skip: 1
   reward_scaling: 1.0
-  noop: 1
-  seed: 0
+  seed: 1
 
 # logger
 logger:
@@ -20,16 +19,17 @@ logger:
 
 # Buffer
 replay_buffer:
-  dataset: halfcheetah-medium-v2
+  dataset: hopper-medium-v2
   batch_size: 256
 
 # Optimization
 optim:
   device: cuda:0
-  lr: 3e-4
+  actor_lr: 1e-4
+  critic_lr: 3e-4
   weight_decay: 0.0
   batch_size: 256
-  gradient_steps: 100000
+  gradient_steps: 50_000
 
 # Policy and model
 model:
@@ -47,7 +47,7 @@ loss:
   temperature: 1.0
   min_q_weight: 1.0
   max_q_backup: False
-  deterministic_backup: True
+  deterministic_backup: False
   num_random: 10
-  with_lagrange: False
-  lagrange_thresh: 0.0
+  with_lagrange: True
+  lagrange_thresh: 10.0 # tau
