--- a/examples/cql/online_config.yaml
+++ b/examples/cql/online_config.yaml
@@ -39,10 +39,10 @@ replay_buffer:
 optim:
   utd_ratio: 1
   device: cuda:0
-  lr: 3e-4
+  actor_lr: 1e-4
+  critic_lr: 3e-4
   weight_decay: 0.0
   batch_size: 256
-  lr_scheduler: ""
   optim_steps_per_batch: 200
 
 # Policy and model
