--- a/examples/cql/offline_config.yaml
+++ b/examples/cql/offline_config.yaml
@@ -29,7 +29,8 @@ optim:
   critic_lr: 3e-4
   weight_decay: 0.0
   batch_size: 256
-  gradient_steps: 50_000
+  gradient_steps: 1_000_000
+  policy_eval_start: 40_000
 
 # Policy and model
 model:
@@ -47,7 +48,7 @@ loss:
   temperature: 1.0
   min_q_weight: 1.0
   max_q_backup: False
-  deterministic_backup: False
+  deterministic_backup: True
   num_random: 10
   with_lagrange: True
-  lagrange_thresh: 10.0 # tau
+  lagrange_thresh: 5.0 # tau
