--- a/.circleci/unittest/linux_libs/scripts_pettingzoo/environment.yml
+++ b/.circleci/unittest/linux_libs/scripts_pettingzoo/environment.yml
@@ -19,4 +19,5 @@ dependencies:
     - pytest-error-for-skips
     - expecttest
     - pyyaml
+    - autorom[accept-rom-license]
     - pettingzoo[all]
