--- a/.circleci/unittest/linux_examples/scripts/environment.yml
+++ b/.circleci/unittest/linux_examples/scripts/environment.yml
@@ -20,11 +20,10 @@ dependencies:
     - pyyaml
     - scipy
     - hydra-core
-    - tensorboard
     - imageio==2.26.0
-    - wandb
     - dm_control
     - mlflow
     - av
     - coverage
     - vmas
+    - transformers
