pre build script for installing tensordict from main

--- a/.github/workflows/build-wheels-m1.yml
+++ b/.github/workflows/build-wheels-m1.yml
@@ -31,7 +31,7 @@ jobs:
       test-infra-repository: pytorch/test-infra
       test-infra-ref: main
       build-matrix: ${{ needs.generate-matrix.outputs.matrix }}
-      pre-script: ""
+      pre-script: .github/scripts/pre_build_script_m1.sh
       post-script: ""
       package-name: torchrl
       runner-type: macos-m1-12
