--- a/examples/ppo/config_atari.yaml
+++ b/examples/ppo/config_atari.yaml
@@ -1,7 +1,6 @@
 # Environment
 env:
   env_name: PongNoFrameskip-v4
-  frame_skip: 4
 
 # collector
 collector:
@@ -28,7 +27,7 @@ loss:
   gamma: 0.99
   mini_batch_size: 1024
   ppo_epochs: 3
-  gae_lamdda: 0.95
+  gae_lambda: 0.95
   clip_epsilon: 0.1
   anneal_clip_epsilon: True
   critic_coef: 1.0
