--- a/examples/ppo/config_mujoco.yaml
+++ b/examples/ppo/config_mujoco.yaml
@@ -25,7 +25,7 @@ loss:
   gamma: 0.99
   mini_batch_size: 64
   ppo_epochs: 10
-  gae_lamdda: 0.95
+  gae_lambda: 0.95
   clip_epsilon: 0.2
   critic_coef: 0.25
   entropy_coef: 0.0
