--- a/examples/impala/config.yaml
+++ b/examples/impala/config.yaml
@@ -4,28 +4,28 @@ env:
 
 # collector
 collector:
-  frames_per_batch: 4096
+  frames_per_batch: 128
   total_frames: 40_000_000
 
 # logger
 logger:
   backend: csv
-  exp_name: Atari_Schulman17
+  exp_name: Atari_Espeholt18
   test_interval: 40_000_000
   num_test_episodes: 3
 
 # Optim
 optim:
-  lr: 2.5e-4
+  lr: 0.0006
   eps: 1.0e-6
   weight_decay: 0.0
-  max_grad_norm: 0.5
+  max_grad_norm: 40.0
   anneal_lr: True
 
 # loss
 loss:
   gamma: 0.99
-  mini_batch_size: 1024
+  mini_batch_size: 128
   critic_coef: 1.0
-  entropy_coef: 0.01
+  entropy_coef: 0.025
   loss_critic_type: l2
