--- a/examples/dqn/config_cartpole.yaml
+++ b/examples/dqn/config_cartpole.yaml
@@ -10,6 +10,8 @@ collector:
   eps_end: 0.05
   annealing_frames: 250_000
   init_random_frames: 10_000
+  device: None
+  storing_device: None
 
 # buffer
 buffer:
