--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -6,9 +6,9 @@ env:
 # collector
 collector:
   total_frames: 40_000_000
-  frames_per_batch: 16  # 512 * 4
-  eps_start: 1.0
-  eps_end: 0.01
+  frames_per_batch: 2048
+  start_e: 1.0
+  end_e: 0.01
   annealing_frames: 4_000_000
   init_random_frames: 320_000
 
@@ -19,9 +19,10 @@ buffer:
 
 # logger
 logger:
-  backend: csv
+  backend: wandb
   exp_name: DQN
-  record_interval: 40_000_000
+  test_interval: 40_000_000
+  num_test_episodes: 3
 
 # Optim
 optim:
@@ -31,4 +32,4 @@ optim:
 loss:
   gamma: 0.99
   hard_update_freq: 250
-  num_updates: 1  # 128 * 4
+  num_updates: 128
