--- a/examples/ppo/config_mujoco.yaml
+++ b/examples/ppo/config_mujoco.yaml
@@ -27,6 +27,7 @@ loss:
   ppo_epochs: 10
   gae_lambda: 0.95
   clip_epsilon: 0.2
+  anneal_clip_epsilon: False
   critic_coef: 0.25
   entropy_coef: 0.0
   loss_critic_type: l2
