--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -5,14 +5,14 @@ env:
   exp_name: "HalfCheetah-TD3-ICLR"
   library: gym
   frame_skip: 1
-  seed: 42
+  seed: 0 #42
 
 # collector
 collector:
   total_frames: 3000000
   init_random_frames: 25_000
   init_env_steps: 1000
-  frames_per_batch: 1000
+  frames_per_batch: 1
   max_frames_per_traj: 1000
   async_collection: 1
   collector_device: cpu
