--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -9,9 +9,9 @@ env:
 
 # collector
 collector:
-  total_frames: 1000000
+  total_frames: 3_000_000
   init_random_frames: 25000
-  frames_per_batch: 1000
+  frames_per_batch: 1
   max_frames_per_traj: 1000
   init_env_steps: 1000
   async_collection: 1
@@ -30,8 +30,7 @@ optim:
   gamma: 0.99
   loss_function: l2
   lr: 3e-4
-  weight_decay: 2e-4
-  lr_scheduler: ""
+  weight_decay: 0.0
   batch_size: 256
   target_update_polyak: 0.995
 
