add conditional ci
Signed-off-by: Matteo Bettini <matbet@meta.com>

--- a/.github/workflows/test-linux-smacv2.yml
+++ b/.github/workflows/test-linux-smacv2.yml
@@ -17,6 +17,7 @@ concurrency:
 
 jobs:
   unittests:
+    if: ${{ github.event.label.name == 'Environments' }}
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
       repository: pytorch/rl
