--- a/examples/ddpg/config.yaml
+++ b/examples/ddpg/config.yaml
@@ -2,7 +2,7 @@
 env:
   name: HalfCheetah-v3
   task: ""
-  exp_name: "HalfCheetah-DDPG-ICLR"
+  exp_name: "HalfCheetah-DDPG"
   library: gym
   frame_skip: 1
   seed: 1
@@ -11,7 +11,7 @@ env:
 collector:
   total_frames: 3_000_000
   init_random_frames: 25_000
-  frames_per_batch: 1
+  frames_per_batch: 1000
   max_frames_per_traj: 1000
   init_env_steps: 1000
   async_collection: 1
