--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -2,7 +2,7 @@
 env:
   name: HalfCheetah-v3
   task: ""
-  exp_name: "HalfCheetah-TD3-ICLR"
+  exp_name: "HalfCheetah-TD3"
   library: gym
   frame_skip: 1
   seed: 42
@@ -12,7 +12,7 @@ collector:
   total_frames: 3000000
   init_random_frames: 25_000
   init_env_steps: 1000
-  frames_per_batch: 1
+  frames_per_batch: 1000
   max_frames_per_traj: 1000
   async_collection: 1
   collector_device: cpu
