--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -1,4 +1,4 @@
-# Task and env
+# task and env
 env:
   name: Pendulum-v1
   task: ""
@@ -11,12 +11,12 @@ env:
   noop: 1
   seed: 0
 
-# Collector
+# collector
 collector:
   frames_per_batch: 200
   total_frames: 1000000 
   multi_step: 0
-  init_random_frames: 1000
+  init_random_frames: 25000
   env_per_collector: 1
   collector_device: cpu
   max_frames_per_traj: 200
@@ -29,23 +29,22 @@ logger:
   mode: online
   eval_iter: 1000
 
-# Buffer
+# replay buffer
 replay_buffer:
   prb: 0
   buffer_prefetch: 64
   size: 1_000_000
 
-# Optimization
+# optimization
 optim:
   utd_ratio: 1
   device: cuda:0
   lr: 3e-4
   weight_decay: 0.0
   batch_size: 256
-  lr_scheduler: ""
   optim_steps_per_batch: 200
 
-# Policy and model
+# network
 model:
   hidden_sizes: [256, 256]
   activation: relu
@@ -54,9 +53,10 @@ model:
 
 # loss
 loss: 
-  loss_function: smooth_l1
+  loss_function: l2
   gamma: 0.99
   tau: 0.005
-  # IQL hyperparameter
+
+# IQL specific hyperparameter
   temperature: 3.0
   expectile: 0.7
