--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -10,7 +10,7 @@ collector:
   start_e: 1.0
   end_e: 0.01
   annealing_frames: 4_000_000
-  init_random_frames: 320_000
+  init_random_frames: 200_000
 
 # buffer
 buffer:
@@ -26,10 +26,11 @@ logger:
 
 # Optim
 optim:
-  lr: 1e-4
+  lr: 0.00025
+  max_grad_norm: 10
 
 # loss
 loss:
   gamma: 0.99
-  hard_update_freq: 250
-  num_updates: 128
+  hard_update_freq: 10_000
+  num_updates: 1
