--- a/examples/cql/online_config.yaml
+++ b/examples/cql/online_config.yaml
@@ -8,6 +8,8 @@ env:
   frame_skip: 1
   reward_scaling: 1.0
   seed: 0
+  train_num_envs: 1
+  eval_num_envs: 1
 
 # Collector
 collector:
@@ -18,6 +20,7 @@ collector:
   env_per_collector: 1
   collector_device: cpu
   max_frames_per_traj: 1000
+  num_worker: 1
 
 # logger
 logger:
