--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -4,12 +4,12 @@ env:
   task: ""
   library: gym
   exp_name: iql_pendulum_gym
-  record_video: 0
   n_samples_stats: 1000
   frame_skip: 1
-  reward_scaling: 1.0
-  noop: 1
   seed: 0
+  train_num_envs: 1
+  eval_num_envs: 1
+
 
 # collector
 collector:
@@ -20,6 +20,7 @@ collector:
   env_per_collector: 1
   collector_device: cpu
   max_frames_per_traj: 200
+  num_worker: 1
 
 # logger
 logger:
