--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -6,6 +6,7 @@ env:
   exp_name: iql_pendulum_gym
   n_samples_stats: 1000
   frame_skip: 1
+  reward_scaling: 1.0
   seed: 0
   train_num_envs: 1
   eval_num_envs: 1
