--- a/examples/iql/offline_config.yaml
+++ b/examples/iql/offline_config.yaml
@@ -5,6 +5,7 @@ env:
   library: gym
   exp_name: iql_halfcheetah-medium-v2
   n_samples_stats: 1000
+  reward_scaling: 1.0
   frame_skip: 1
   seed: 0
 
