--- a/examples/cql/offline_config.yaml
+++ b/examples/cql/offline_config.yaml
@@ -1,9 +1,9 @@
 # env and task
 env:
-  name: HalfCheetah-v2
+  name: Hopper-v2
   task: ""
   library: gym
-  exp_name: cql_halfcheetah-medium-v2
+  exp_name: cql_hopper-medium-v2
   n_samples_stats: 1000
   frame_skip: 1
   reward_scaling: 1.0
@@ -19,17 +19,19 @@ logger:
 
 # replay buffer
 replay_buffer:
-  dataset: halfcheetah-medium-v2
+  dataset: hopper-medium-v2
   batch_size: 256
 
 # optimization
 optim:
   device: cuda:0
-  lr: 3e-4
+  actor_lr: 3e-4
+  critic_lr: 3e-4
   weight_decay: 0.0
-  gradient_steps: 100000
+  gradient_steps: 1_000_000
+  policy_eval_start: 40_000
 
-# Policy and model
+# policy and model
 model:
   hidden_sizes: [256, 256]
   activation: relu
@@ -48,4 +50,4 @@ loss:
   deterministic_backup: False
   num_random: 10
   with_lagrange: True
-  lagrange_thresh: 10.0
+  lagrange_thresh: 5.0 # tau
