--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -1,22 +1,23 @@
 # environment and task
 env:
-  name: HalfCheetah-v3
+  name: Hopper-v3
   task: ""
-  exp_name: "HalfCheetah-SAC"
+  exp_name: "Hopper-SAC"
   library: gym
   frame_skip: 1
-  max_episode_steps: 1_000_000
+  max_episode_steps: 1001
   seed: 1
 
 # collector
 collector:
-  total_frames: 3_000_000
+  total_frames: 1_000_000
   init_random_frames: 25000
   frames_per_batch: 1000
   max_frames_per_traj: 1000
   init_env_steps: 1000
   collector_device: cpu
   env_per_collector: 1
+  reset_at_each_iter: true
 
 # replay buffer
 replay_buffer:
