--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -1,16 +1,16 @@
 # task and env
 env:
-  name: HalfCheetah-v3
+  name: Hopper-v3
   task: ""
-  exp_name: "HalfCheetah-TD3"
+  exp_name: "Hopper-TD3"
   library: gym
   frame_skip: 1
   seed: 42
-  max_episode_steps: 1_000_000
+  max_episode_steps: 1000
 
 # collector
 collector:
-  total_frames: 3000000
+  total_frames: 1000000
   init_random_frames: 25_000
   init_env_steps: 1000
   frames_per_batch: 1000
