--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -1,12 +1,12 @@
 # task and env
 env:
-  name: Hopper-v3
+  name: Walker2d-v3
   task: ""
-  exp_name: "Hopper-TD3"
+  exp_name: "Walker2d-TD3"
   library: gym
   frame_skip: 1
   seed: 42
-  max_episode_steps: 1000
+  max_episode_steps: 5000
 
 # collector
 collector:
@@ -15,6 +15,7 @@ collector:
   init_env_steps: 1000
   frames_per_batch: 1000
   max_frames_per_traj: 1000
+  reset_at_each_iter: False
   collector_device: cpu
   env_per_collector: 1
   num_workers: 1
